# up-streamer-rust

./: Cargo.toml
.cargo/: config.toml
example-utils/hello-world-protos/: Cargo.toml  build.rs
example-utils/hello-world-protos/src/: lib.rs
example-utils/usubscription-static-file/: Cargo.toml
example-utils/usubscription-static-file/src/: lib.rs  testdata.json
example-utils/usubscription-static-file/static-configs/: testdata.json
subscription-cache/: Cargo.toml
subscription-cache/src/: lib.rs
up-linux-streamer/: Cargo.toml  DEFAULT_CONFIG.json5
up-linux-streamer-plugin/: Cargo.toml  DEFAULT_CONFIG.json5  README.md
up-linux-streamer-plugin/src/: config.rs  lib.rs
up-linux-streamer/examples/: mE_client.rs  mE_publisher.rs  mE_service.rs  mE_subscriber.rs  uE_client.rs  uE_publisher.rs  uE_service.rs  uE_subscriber.rs
up-linux-streamer/src/: config.rs  main.rs
up-linux-streamer/vsomeip-configs/: point_to_point.json
up-streamer/: Cargo.toml
up-streamer/src/: ustreamer.rs
up-usubscription/: Cargo.toml
up-usubscription/src/: lib.rs
utils/usubscription-static-file/src/: lib.rs
