[package]
name = "up-linux-streamer"
rust-version.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.35.1", default-features = false }
up-rust = { git = "https://github.com/eclipse-uprotocol/up-rust", rev = "d736fdf35ff4728effa7f36b720f0fc1605d5ba0" }
up-client-zenoh = { git = "https://github.com/ZettaScaleLabs/up-client-zenoh-rust", branch = "bump_1.5.8" }
up-transport-vsomeip = { git = "https://github.com/PLeVasseur/up-client-vsomeip-rust.git", branch = "feature/initial-implementation" }
#up-transport-vsomeip = { git = "https://github.com/PLeVasseur/up-client-vsomeip-rust.git", branch = "feature/investigate_slice_from_raw_parts" }
up-streamer = { path = "../up-streamer" }
zenoh = { version = "0.11.0-rc.3", features = ["unstable"]}
env_logger = "0.10.2"
log = "0.4.21"
async-trait = "0.1.80"
